Created introduction card on Home and setup Contact page. Implemented Dark/Light mode

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,12 +1,58 @@
 ﻿@{
-    ViewData["Title"] = "Doula Services";
+    ViewData["Title"] = "Shirley Reimer Doula Services";
 }
 
-
+<!--
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+-->
+
+<body>
+    <div class="row quote-text" style="margin-top: 0px">
+        <p>Serving the elderly, terminally ill, dying, and their loved ones from all backgrounds with dignity, kindness, and love.</p>
+    </div>
+
+    <div class="container-sm introduction background-image" style="margin-bottom: 25px; color: black;">
+
+        <div class="row">
+            <!-- Contains Photograph with text underneath -->
+            <div class="col" style="align-items: center; text-align: center;">
+                <div style="text-align: center;">
+                    <img src="images/oli.jpg" style="border-radius:0%; width:75%; min-width: 250px; max-width: 400px;"/>
+                </div>
+
+                <div class="strokeme" style="font-weight: bold;">
+                    <h3 style="margin-top: 10px;">Shirley Reimer</h3>
+                    <div style="font-family: Verdana; font-size: 12px;">
+                        <p>M.S. Psychology from ASU</p>
+                        <p>Certified Death Doula</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Contains quote with Schedule an Introductory Meeting button underneath -->
+            <div class="col" style="width:50%; align-items: center; justify-content: center; text-align: center;">
+                <p class="quote-text" style="margin-top: 10%; border-bottom: 1px solid black;">
+                    "You go to heaven for the scenery, or to hell for the company.<br />
+                    You can keep going here with multiple quotes or do a long one.<br />
+                    I'm not sure what it would look better with.'"
+                </p>
 
 
+                <p style="margin-top: 25px; margin-bottom: 10px;">Provider of death doula services to the Phoenix area.</p>
 
+
+                <div style="align-self: center; justify-content: center;">
+                    <button>Schedule an introductory meeting</button>
+                </div>
+
+            </div>
+
+        </div>
+
+        
+
+    </div>
+</body>
