--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,21 +10,21 @@
 -->
 
 <body>
-    <div class="row quote-text" style="margin-top: 0px">
+    <div class="row quote-text" style="padding-top: 10px">
         <p>Serving the elderly, terminally ill, dying, and their loved ones from all backgrounds with dignity, kindness, and love.</p>
     </div>
 
-    <div class="container-sm introduction background-image" style="margin-bottom: 25px; color: black;">
+    <div class="container-sm introduction" style="margin-bottom: 25px;">
 
         <div class="row">
             <!-- Contains Photograph with text underneath -->
-            <div class="col" style="align-items: center; text-align: center;">
-                <div style="text-align: center;">
-                    <img src="images/oli.jpg" style="border-radius:0%; width:75%; min-width: 250px; max-width: 400px;"/>
+            <div class="col portrait">
+                <div>
+                    <img src="images/oli.jpg" style="width:75%; min-width: 250px; max-width: 400px;"/>
                 </div>
 
-                <div class="strokeme" style="font-weight: bold;">
-                    <h3 style="margin-top: 10px;">Shirley Reimer</h3>
+                <div>
+                    <h3>Shirley Reimer</h3>
                     <div style="font-family: Verdana; font-size: 12px;">
                         <p>M.S. Psychology from ASU</p>
                         <p>Certified Death Doula</p>
@@ -33,25 +33,40 @@
             </div>
 
             <!-- Contains quote with Schedule an Introductory Meeting button underneath -->
-            <div class="col" style="width:50%; align-items: center; justify-content: center; text-align: center;">
-                <p class="quote-text" style="margin-top: 10%; border-bottom: 1px solid black;">
-                    "You go to heaven for the scenery, or to hell for the company.<br />
-                    You can keep going here with multiple quotes or do a long one.<br />
-                    I'm not sure what it would look better with.'"
+            <div class="col introduction-contact">
+                <p class="quote-text" style="border-bottom: 1px solid;">
+                    "You go to heaven for the scenery, or to hell for the company.
+                    You can keep going here with multiple quotes or do a long one.
+                    I'm not sure what it would look better with."
                 </p>
 
-
-                <p style="margin-top: 25px; margin-bottom: 10px;">Provider of death doula services to the Phoenix area.</p>
-
+                <p style="margin-bottom: 10px; margin-top: 10px;">Provider of death doula services to the Phoenix area.</p>
 
                 <div style="align-self: center; justify-content: center;">
                     <button>Schedule an introductory meeting</button>
                 </div>
-
             </div>
-
         </div>
 
+        <div class="container-sm support">
+            <h2>Provided Support</h2>
+            <div class="row">
+                <div class="col services">
+                    <h3>Example 1</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+
+                <div class="col services">
+                    <h3>Example 2</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+
+                <div class="col services">
+                    <h3>Example 3</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+            </div>
+        </div>
         
 
     </div>
