--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="light">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,27 +10,43 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-md border-bottom box-shadow mb-3">
-            <div class="form-check form-switch" id="btnSwitch" style="margin-left: 5%; font-size: 12px; white-space: nowrap;">
-                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                <label id="modeLabel" class="form-check-label" for="flexSwitchCheckDefault">Dark Mode</label>
-            </div>
-            <div class="container-fluid d-flex flex-column align-items-center header-background" style="margin-right: 5%;">
-                <a class="navbar-brand mx-auto" asp-area="" asp-controller="Home" asp-action="Index">Shirley The Death Doula</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
-                        </li>
-                    </ul>
+        <nav class="navbar navbar-expand-md navbar-dark border-bottom box-shadow mb-3" style="background-color: #444444;">
+
+            <!-- navbar-nav flex-row flex-wrap ms-md-auto -->
+            <div class="container-fluid d-flex flex-row justify-content-between header-background">
+
+                    <!-- Logo -->    
+                    <img src="~/images/oli.jpg" style="max-width: 7%; min-width:100px;"/>
+
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                        <!-- Website Name Linking Home -->
+                    <a class="navbar-brand mx-auto" asp-area="" asp-controller="Home" asp-action="Index">Shirley The Death Doula</a>
+
+                    <!-- Navbar options toggle visible on smaller screens -->
+                    <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <!-- Navigation links -->
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" style="color: white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" style="color: white" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+
+                <!-- Light/Dark Mode Button -->
+                <div class="d-flex flex-column form-check form-switch" id="btnSwitch" font-size: 12px;">
+                    <input class="form-check-input mx-auto" type="checkbox" id="flexSwitchCheckDefault">
+                    <label id="modeLabel" class="form-check-label" style="color: white; word-break:break-word;" for="flexSwitchCheckDefault">Light Mode</label>
+                </div>
+
             </div>
         </nav>
     </header>
@@ -42,10 +58,28 @@
     </div>
 
     <footer class="footer footer-background-image">
-        <div style="text-align: center; margin-bottom: 0px;">
-            <p>Disclaimer: Shirley Reimer Death Doula is for consulting, education and emotional support.</p>
-            <p>This is not in any way considered to be a funeral establishment or licensed mental health establishment.</p>
+        <!-- Socials -->
+
+        <div class="container-sm">
+            <div class="container row">
+                <div class="col" style="width: 33%;">
+                    <div class="icon-container col">
+                        <img src="/icons/facebook.png" class="icon" />
+                        <img src="/icons/instagram.png" class="icon" />
+                        <img src="/icons/twitter.png" class="icon" />
+                    </div>
+                    <div class="row">
+                        <p style="text-align: center;">surelyreim@yahoo.com</p>
+                    </div>
+                </div>
+                <!-- Disclaimer -->
+                <div class="col disclaimer" style="width: 67%;">
+                    <p>Disclaimer: Shirley Reimer Death Doula is for consulting, education and emotional support.</p>
+                    <p>This is not in any way considered to be a funeral establishment or licensed mental health establishment.</p>
+                </div>
+            </div>
         </div>
+
         <div class="container">
             &copy; 2025 - Doula - <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
         </div>
