--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -73,6 +73,16 @@ button.accept-policy {
 /*
     Footer
 */
+.disclaimer {
+    margin-left: 1%;
+    margin-right: 1%;
+    text-align: left;
+    word-wrap: break-word;
+    white-space: normal;
+    font-size: 12px;
+    align-content:center;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
@@ -97,6 +107,20 @@ button.accept-policy {
     margin-bottom: 200px;
 }
 
+.icon-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+.icon {
+    padding-left: 1%;
+    padding-right: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
+}
 
 /*
     Light/Dark Mode Switch
@@ -160,6 +184,6 @@ input:checked + .slider:before {
     border-radius: 34px;
 }
 
-    .slider.round:before {
-        border-radius: 50%;
-    }
+.slider.round:before {
+    border-radius: 50%;
+}
