--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -45,25 +45,29 @@ button {
 /*    background-color: #575757;
     color: white;*/
     font-family: Bahnschrift;
-    border: black;
+    margin: 10px;
 }
 
 /*
     Home Page
 */
 
-
 .introduction {
     justify-content: center;
     text-align: center;
-    background: #343434;
+/*    background: #343434;*/
     width: 100%;
-    padding: 35px;
+/*    padding: 35px;*/
     margin: 0 auto;
     border-width: 10px;
-    border: outset;
-    border-color: #000000;
+/*    border: outset;*/
     font-family: Papyrus;
+}
+
+.portrait {
+    align-items: center;
+    text-align: center;
+    font-weight: bold;
 }
 
 .background-image {
@@ -94,15 +98,46 @@ button {
 }
 
 .bordered {
-    border: solid, black, 1px;
+    border: solid, 1px;
     border-radius: 80px;
     padding-top: 15px;
+}
+
+.introduction-contact {
+    width: 50%;
+    min-width: 200px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .quote-text {
     text-align: center;
     align-self: center;
     font-family: "Lucida Handwriting";
+    padding-bottom: 15px;
+}
+
+.support {
+    border-top: 1px solid;
+    padding-top: 25px;
+    margin-top: 25px;
+}
+
+.services {
+    border: 1px solid;
+    padding: 10px;
+    margin: 10px;
+    width: 33%;
+    text-align: left;
+    min-width: 200px;
+}
+
+h3 {
+    text-align: center;
+    margin-top: 10px;
 }
 
 /*
@@ -110,20 +145,21 @@ button {
 */
 .label {
     height: 30px;
-    text-align: right;
+/*    text-align: right;*/
     align-content: center;
 }
 
 .input {
     height: 30px;
-    width: 50%;
-    min-width: 200px;
+/*    width: 50%;*/
+/*    min-width: 200px;*/
+    max-width: none;
 }
 
 .message {
     height: 250px;
     width: 100%;
-    min-width: 200px;
+/*    min-width: 200px;*/
 
     padding-left: 20px;
     padding-right: 20px;
@@ -131,14 +167,14 @@ button {
 
 .label-column {
     float: left;
-    width: 20%;
-    min-width: 100px;
+    width: 100px;
+/*    min-width: fit-content;*/
 }
 
 .submit-button {
     margin-top: 10px;
     margin-bottom: 10px;
     justify-content: center;
-    min-width: 200px;
+/*    min-width: 200px;*/
     width: 50%;
 }
