--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -3,63 +3,53 @@
 }
 <h1 style="text-align: center;">@ViewData["Title"]</h1>
 
-<div class="container d-flex flex-col">
+<div class="container-sm d-flex flex-col">
 
-    <div class="col" style="width:20%; display: flex; flex-direction: column; white-space: normal;">
-        <div>
-            <p>If you would like to get in contact with me you can send an email to me here using the message box.
-               <br />
-               <br />
-               Alternatively you can email me at:<br />
-               <a href="mailto:surelyreim@yahoo.com">surelyreim@yahoo.com</a>
-           
-               <br />
-
-               If you'd like to reach out to me on my socials:
-            </p>
-        </div>
-        <!--
-        <div class="icon-container col" style="display: flex-start; flex-flow: column wrap;">
-            <img src="/icons/facebook.png" class="icon row" />
-            <img src="/icons/instagram.png" class="icon row" />
-            <img src="/icons/twitter.png" class="icon row" />
-        </div>
-        -->
-
-    </div>
-
-    <!-- Contact Form -->
-    <div class="col d-flex flex-column" style="padding-top: 10px; padding-bottom: 10px;">
-
-        <div class="container" >
-            <div class="col">
-                <p class="label">Name:</p>
+    <div class="row">
+        <div class="col" style="width:50%; min-width: 300px; display: flex; flex-direction: column; white-space: normal;">
+            <div>
+                <p>If you would like to get in contact with me you can send an email to me here using the message box.
+                   <br />
+                   <br />
+                   Alternatively you can email me at:<br />
+                   <a href="mailto:surelyreim@yahoo.com">surelyreim@yahoo.com</a>
+                </p>
             </div>
-            <div class="col">
-                <input class="input" />
-            </div>
+
         </div>
 
-        <div class="container">
-            <div class="col">
-                <p class="label">Email:</p>
-            </div>
-            <div class="col">
-                <input class="input" />
-            </div>
-        </div>
+        <!-- Contact Form -->
+        <div class="col d-flex flex-column" style="width:50%; padding-top: 10px; padding-bottom: 10px;">
 
-        <div class="container">
-            <div class="col">
-                <p class="label">Message:</p>
+            <div class="container" >
+                <div class="col">
+                    <p class="label">Name:</p>
+                </div>
+                <div class="col">
+                    <input class="input" />
+                </div>
             </div>
-            <div class="col">
-                <textarea class="message" minlength="1" maxlength="620"
-                          placeholder=""></textarea>
-                <button class="submit-button">Submit Message</button>
+
+            <div class="container">
+                <div class="col">
+                    <p class="label">Email:</p>
+                </div>
+                <div class="col">
+                    <input class="input" />
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="col">
+                    <p class="label">Message:</p>
+                </div>
+                <div class="col">
+                    <textarea class="message" minlength="1" maxlength="620"
+                              placeholder=""></textarea>
+                    <button class="submit-button">Submit Message</button>
+                </div>
             </div>
         </div>
     </div>
-
 </div>
 
