Added content to Pricing and About Me pages. Added styling to footer and removed instagram & twitter logos

--- a/Views/Home/AboutMe.cshtml
+++ b/Views/Home/AboutMe.cshtml
@@ -3,20 +3,33 @@
     ViewData["Title"] = "About Me";
 }
 
+@section Styles {
+    <link rel="stylesheet" href="~/css/pages/about.css"/>
+}
+
 <h1>About Me</h1>
 
-<div>
-    <p>
-        I found the end of life doula profession in my retirement from work as a mental health therapist and special education school psychologist.
-        I experienced a sudden loss of a close family member at the same time my mom was entering assisted care.
-        My mom has lived abundantly throughout her life and is still thriving at 90 years old although with some challenges that require her need for assisted living.
-        This opened the door for me to an unmet need for knowledgeable, empathic assistance for families, caregivers, and patients/clients in this developmental stage of life.
-    </p>
-    <p>
-        According to Eric Erikson, the developer of the theory of psycho-social developmental our lives are composed of stages of development from infancy to death.
-        Each stage has a conflict to resolve, an important event related to this conflict and a positive outcome if the needs of the stage are met.
-        The final psychosocial stage occurs during old age and is focused on reflecting back on life.﻿
-        At this point in development, people look back on the events of their lives and determine if they are happy with the life that they lived or if they regret the things they did or didn't do.
-        When death occurs at the end of a typical life span the individual’s conflict is between Integrity vs. Despair
-    </p>
+<div class="container-sm d-flex flex-row justify-content-center">
+    <div>
+        <img src="/images/oli.jpg" style="width: 400px; height: 600px; " />
+    </div>
+
+    <div class="card">
+        <p>
+            I found the end of life doula profession in my retirement from work as a mental health therapist and special education school psychologist.
+            I experienced a sudden loss of a close family member at the same time my mom was entering assisted care.
+            My mom has lived abundantly throughout her life and is still thriving at 90 years old although with some challenges that require her need for assisted living.
+            This opened the door for me to an unmet need for knowledgeable, empathic assistance for families, caregivers, and patients/clients in this developmental stage of life.
+        </p>
+        <p>
+            According to Eric Erikson, the developer of the theory of psycho-social developmental our lives are composed of stages of development from infancy to death.
+            Each stage has a conflict to resolve, an important event related to this conflict and a positive outcome if the needs of the stage are met.
+            The final psychosocial stage occurs during old age and is focused on reflecting back on life.﻿
+            At this point in development, people look back on the events of their lives and determine if they are happy with the life that they lived or if they regret the things they did or didn't do.
+            When death occurs at the end of a typical life span the individual’s conflict is between Integrity vs. Despair
+        </p>
+    </div>
+
+
+
 </div>
