--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -1,7 +1,12 @@
 ﻿@{
     ViewData["Title"] = "Contact";
 }
-<h1 style="text-align: center;">@ViewData["Title"]</h1>
+
+@section Styles {
+    <link rel="stylesheet" href="~/css/pages/contact.css" />
+}
+
+<h1>@ViewData["Title"]</h1>
 
 <div class="container-sm d-flex flex-col">
 
