--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Gentle Kindess with Shirley Reimer";
 }
+@section Styles {
+    <link rel="stylesheet" href="~/css/pages/home.css"/>
+}
 
 <!--
 <div class="text-center">
@@ -25,10 +28,9 @@
                     <img src="images/oli.jpg" style="width:75%; min-width: 250px; max-width: 400px;"/>
                 </div>
 
-                <div>
-                    <h3 style="font-family: Verdana">Shirley Reimer, M.ED. , Ed S.</h3>
-                    <div style="font-family: Verdana; font-size: 12px;">
-                    </div>
+                <div style="font-family: Verdana; font-weight: lighter;">
+                    <h3 >Shirley Reimer</h3>
+                    <p>M.ED. , Ed S.</p>
                 </div>
             </div>
 
@@ -40,7 +42,7 @@
                     I'm not sure what it would look better with."
                 </p>
 
-                <p style="margin-bottom: 10px; margin-top: 10px;">Provider of death doula services to the Phoenix area.</p>
+                <p style="margin-bottom: 10px; margin-top: 10px;">Assisting the Phoenix area.</p>
 
                 <div style="align-self: center; justify-content: center;">
                     <button>Schedule an introductory meeting</button>
@@ -48,7 +50,7 @@
             </div>
         </div>
 
-        <div class="container-sm support">
+        <div class="container-sm card">
             <h2>Provided Support</h2>
             <div class="row">
                 <div class="col services">
