--- a/Views/Home/Pricing.cshtml
+++ b/Views/Home/Pricing.cshtml
@@ -3,5 +3,126 @@
     ViewData["Title"] = "Pricing";
 }
 
+@section Styles {
+    <link rel="stylesheet" href="~/css/pages/pricing.css" />
+}
+
+
 <h1>Pricing</h1>
 
+
+<div class="container-md d-flex flex-row flex-wrap text-center justify-content-center align-content-center">
+    <!-- Section 1 -->
+    <div class="card d-flex flex-column">
+        <div class="flex-fill">
+            <div class="border-bottom">
+                <h2>Example 1</h2>
+                <p class="description">Short Description</p>
+            </div>
+
+            <div class="p-2 m-2 text-center">
+                <p>Complementary 45 Minute Consultation</p>
+                <p>In Home Care Plan Visit</p>
+            </div>
+        </div>
+
+        <div class="price-row border-top p-3 pb-0 d-flex flex-wrap">
+            <h3>$75</h3>
+            <button>Select</button>
+        </div>
+    </div>
+
+    <!-- Section 2 -->
+    <div class="card d-flex flex-column">
+        <div class="flex-fill">
+            <div class="border-bottom">
+                <h2>Example 1</h2>
+                <p class="description">Short Description</p>
+            </div>
+
+            <div class="p-2 m-2 text-center">
+                <p>Complementary 45 Minute Consultation</p>
+                <p>Complementary 45 Minute Consultation</p>
+                <p>In Home Care Plan Visit</p>
+            </div>
+        </div>
+
+        <div class="price-row border-top p-3 pb-0 d-flex flex-wrap">
+            <h3>$75</h3>
+            <button>Select</button>
+        </div>
+    </div>
+
+    <!-- Section 3 -->
+    <div class="card d-flex flex-column">
+        <div class="flex-fill">
+            <div class="border-bottom">
+                <h2>Example 1</h2>
+                <p class="description">Short Description</p>
+            </div>
+
+            <div class="p-2 m-2 text-center">
+                <p>Complementary 45 Minute Consultation</p>
+                <p>In Home Care Plan Visit</p>
+                <p>Complementary 45 Minute Consultation</p>
+                <p>Complementary 45 Minute Consultation</p>
+            </div>
+        </div>
+
+        <div class="price-row border-top p-3 pb-0 d-flex flex-wrap">
+            <h3>$75</h3>
+            <button>Select</button>
+        </div>
+    </div>
+
+    <!-- Section 4 -->
+    <div class="card d-flex flex-column">
+        <div class="flex-fill">
+            <div class="border-bottom">
+                <h2>Example 1</h2>
+                <p class="description">Short Description</p>
+            </div>
+
+            <div class="p-2 m-2 text-center">
+                <p>Complementary 45 Minute Consultation</p>
+                <p>In Home Care Plan Visit</p>
+                <p>Complementary 45 Minute Consultation</p>
+                <p>Complementary 45 Minute Consultation</p>
+                <p>Complementary 45 Minute Consultation</p>
+                <p>Complementary 45 Minute Consultation</p>
+            </div>
+        </div>
+
+        <div class="price-row border-top p-3 pb-0 d-flex flex-wrap">
+            <h3>$75</h3>
+            <button>Select</button>
+        </div>
+    </div>
+
+    <!-- Section 5 -->
+    <div class="card d-flex flex-column">
+        <div class="flex-fill">
+            <div class="border-bottom">
+                <h2>Example 1</h2>
+                <p class="description">Short Description</p>
+            </div>
+
+            <div class="p-2 m-2 text-center">
+                <p>Complementary 45 Minute Consultation</p>
+                <p>In Home Care Plan Visit</p>
+                <p>Complementary 45 Minute Consultation</p>
+                <p>Complementary 45 Minute Consultation</p>
+                <p>Complementary 45 Minute Consultation</p>
+                <p>Complementary 45 Minute Consultation</p>
+                <p>Complementary 45 Minute Consultation</p>
+                <p>Complementary 45 Minute Consultation</p>
+            </div>
+        </div>
+
+        <div class="price-row border-top p-3 pb-0 d-flex flex-wrap">
+            <h3>$75</h3>
+            <button>Select</button>
+        </div>
+    </div>
+
+</div>
