--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,13 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Doula</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Doula.styles.css" asp-append-version="true" />
+    @RenderSection("Styles", required: false)
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark border-bottom box-shadow mb-3" style="background-color: #444444;">
+        <nav class="navbar navbar-expand-md navbar-dark box-shadow mb-3 pt-0" style="top:0">
 
             <!-- navbar-nav flex-row flex-wrap ms-md-auto -->
             <div class="container-fluid d-flex flex-row justify-content-between header-background">
@@ -51,45 +52,33 @@
                 <div id="theme-switch" font-size: 12px;">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z" /></svg>
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z" /></svg>
-
                 </div>
-
 
             </div>
         </nav>
     </header>
 
-    <div class="body-width-adjustment footer-adjustment">
+    <div id="page-body" class="body-width-adjustment footer-adjustment">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
     <footer class="footer footer-background-image">
-        <!-- Socials -->
+        <div class="container-sm d-flex flex-wrap flex-column">
+            <!-- Disclaimer -->
+            <p class="disclaimer m-auto w-100 justify-content-center align-items-center text-center">Disclaimer: Gentle Kindess with Shirley Reimer is for consulting, education and emotional support. This is not in any way considered to be a funeral establishment or licensed mental health establishment.</p>
 
-        <div class="container-sm">
-            <div class="container row">
-                <div class="col" style="width: 33%;">
-                    <div class="icon-container col">
-                        <img src="/icons/facebook.png" class="icon" />
-                        <img src="/icons/instagram.png" class="icon" />
-                        <img src="/icons/twitter.png" class="icon" />
-                    </div>
-                    <div class="row">
-                        <p style="text-align: center;">surelyreim@yahoo.com</p>
-                    </div>
-                </div>
-                <!-- Disclaimer -->
-                <div class="col disclaimer" style="width: 67%;">
-                    <p>Disclaimer: Gentle Kindess with Shirley Reimer is for consulting, education and emotional support.</p>
-                    <p>This is not in any way considered to be a funeral establishment or licensed mental health establishment.</p>
+            <div class="container d-flex flex-wrap-reverse align-items-center justify-content-center text-center">
+                <!-- Copyright -->
+                <p class="m-1 p-1">&copy; 2025 - Gentle Kindness with Shirley Reimer - <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></p>
+        
+                <!-- Socials -->
+                <div class="d-flex flex-row m-0 p-0 center-text justify-content-center" style="width: 250px">
+                    <a href="https://facebook.com"><img class="icon" src="/icons/facebook.png"></a>
+                    <p class="text-center align-self-center m-0 ms-2 p-0">Gentle Kindness</p>
                 </div>
             </div>
-        </div>
-
-        <div class="container">
-            &copy; 2025 - Doula - <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
         </div>
     </footer>
     <script type="text/javascript" src="~/js/color-mode.js" defer></script>
