Added official logo. Resized elements to fit down to 320px screen size

--- a/wwwroot/css/pages/aboutme.css
+++ b/wwwroot/css/pages/aboutme.css
@@ -1,1 +1,16 @@
 ﻿
+.portrait {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-weight: bold;
+    width: max(40rem, 50%);
+}
+
+.portrait-img {
+    width: max(20rem, 100%);
+}
+
+.bio {
+    width: max(40rem, 50%);
+}
