--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -24,7 +24,7 @@
         </div>
 
         <!-- Contact Form -->
-        <div class="col d-flex flex-column" style="width:50%; padding-top: 10px; padding-bottom: 10px;">
+        <div class="col m-auto d-flex flex-column" style="width:50%">
 
             <div class="container" >
                 <div class="col">
