--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Gentle Kindess with Shirley Reimer";
 }
 @section Styles {
-    <link rel="stylesheet" href="~/css/pages/home.css"/>
+    <link rel="stylesheet" href="~/css/pages/home.css" asp-append-version="true" />
 }
 
 <!--
@@ -13,63 +13,71 @@
 -->
 
 <body>
-    <div class="row quote-text" style="padding-top: 10px">
+
+    <div class="row quote-text pt-1">
         <p>
             Providing specialized care for the end of life as a doula.  I am dedicated to building strong, relationships with my patients and families.
         </p>
     </div>
 
-    <div class="container-sm introduction" style="margin-bottom: 25px;">
+    <!-- Portrait, Quote, and Schedule a Meeting Button -->
+    <div class="container-sm row d-flex introduction mb-2">
 
-        <div class="row">
-            <!-- Contains Photograph with text underneath -->
-            <div class="col portrait">
-                <div>
-                    <img src="images/oli.jpg" style="width:75%; min-width: 250px; max-width: 400px;"/>
-                </div>
-
-                <div style="font-family: Verdana; font-weight: lighter;">
-                    <h3 >Shirley Reimer</h3>
-                    <p>M.ED. , Ed S.</p>
-                </div>
+        <!-- Contains Photograph with text underneath -->
+        <div class="col portrait">
+            <div>
+                <img class="portrait-img" src="images/oli.jpg"/>
             </div>
 
-            <!-- Contains quote with Schedule an Introductory Meeting button underneath -->
-            <div class="col introduction-contact">
+            <div style="font-family: Verdana; font-weight: lighter;">
+                <h2>Shirley Reimer</h2>
+                <p>M.ED. , Ed S.</p>
+            </div>
+        </div>
+
+        <!-- Contains quote with Schedule an Introductory Meeting button underneath -->
+        <div class="container col introduction-contact">
+            <div>
                 <p class="quote-text" style="border-bottom: 1px solid;">
                     "You go to heaven for the scenery, or to hell for the company.
                     You can keep going here with multiple quotes or do a long one.
                     I'm not sure what it would look better with."
                 </p>
+            </div>
 
+            <div>
                 <p style="margin-bottom: 10px; margin-top: 10px;">Assisting the Phoenix area.</p>
+            </div>
 
-                <div style="align-self: center; justify-content: center;">
-                    <button>Schedule an introductory meeting</button>
-                </div>
+            <div style="align-self: center; justify-content: center;">
+                <button>Schedule an introductory meeting</button>
             </div>
         </div>
 
-        <div class="container-sm card">
-            <h2>Provided Support</h2>
-            <div class="row">
-                <div class="col services">
+    </div>
+
+    <!-- Provided Support Section -->
+        <div class="container m-2 m-auto ps-0 pe-0 justify-content-center align-items-center">
+            <div>
+                <h2 class="text-center">Provided Support</h2>
+            </div>
+
+            <div class="d-flex flex-wrap m-2">
+                <div class="services card flex-grow-1">
                     <h3>Example 1</h3>
                     <p>Lorem ipsum dolor sit amet.</p>
                 </div>
 
-                <div class="col services">
+                <div class="services card flex-grow-1">
                     <h3>Example 2</h3>
                     <p>Lorem ipsum dolor sit amet.</p>
                 </div>
 
-                <div class="col services">
+                <div class="services card flex-grow-1">
                     <h3>Example 3</h3>
                     <p>Lorem ipsum dolor sit amet.</p>
                 </div>
             </div>
         </div>
-        
 
-    </div>
 </body>
