--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,17 +14,22 @@
         <nav class="navbar navbar-expand-md navbar-dark box-shadow mb-3 pt-0" style="top:0">
 
             <!-- navbar-nav flex-row flex-wrap ms-md-auto -->
-            <div class="container-fluid d-flex flex-row justify-content-between header-background">
+            <div class="container-fluid d-flex flex-nowrap justify-content-center header-background">
 
-                    <!-- Logo -->    
-                    <img src="~/images/oli.jpg" style="max-width: 7%; min-width:100px;"/>
+                <!-- Logo -->
+                <div>
+                    <img style="width: 50px;" src="~/icons/logo.png" />
+                </div>
 
-                <div class="d-flex flex-column justify-content-center align-items-center">
-                        <!-- Website Name Linking Home -->
-                    <a class="navbar-brand mx-auto" asp-area="" asp-controller="Home" asp-action="Index">Gentle Kindess with Shirley Reimer</a>
-
+                <div class="container d-flex flex-column justify-content-center align-items-center ">
+                    <!-- Website Name Linking Home -->
+                    <div class="d-flex flex-wrap align-content-center justify-content-center">
+                        <a class="navbar-brand text-center m-auto" asp-area="" asp-controller="Home" asp-action="Index">Gentle Kindness</a>
+                        <a class="navbar-brand text-center m-auto ps-1" asp-area="" asp-controller="Home" asp-action="Index">with Shirley Reimer</a>
+                    </div>
+                    
                     <!-- Navbar options toggle visible on smaller screens -->
-                    <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    <button class="navbar-toggler navbar-light m-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -49,7 +54,7 @@
                 </div>
 
                 <!-- Light/Dark Mode Button -->
-                <div id="theme-switch" font-size: 12px;">
+                <div id="theme-switch" style="min-width:50px;">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z" /></svg>
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z" /></svg>
                 </div>
@@ -65,14 +70,16 @@
     </div>
 
     <footer class="footer footer-background-image">
-        <div class="container-sm d-flex flex-wrap flex-column">
+        <div class="container d-flex flex-wrap flex-column">
             <!-- Disclaimer -->
-            <p class="disclaimer m-auto w-100 justify-content-center align-items-center text-center">Disclaimer: Gentle Kindess with Shirley Reimer is for consulting, education and emotional support. This is not in any way considered to be a funeral establishment or licensed mental health establishment.</p>
+            <p class="disclaimer m-auto w-100 justify-content-center align-items-center text-center">Disclaimer: Gentle Kindness with Shirley Reimer is for consulting, education and emotional support. This is not in any way considered to be a funeral establishment or licensed mental health establishment.</p>
 
             <div class="container d-flex flex-wrap-reverse align-items-center justify-content-center text-center">
                 <!-- Copyright -->
-                <p class="m-1 p-1">&copy; 2025 - Gentle Kindness with Shirley Reimer - <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></p>
-        
+                <div>
+                <p class="m-1 p-1 text-wrap">&copy; 2025 - Gentle Kindness with Shirley Reimer - <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></p>
+                </div>
+
                 <!-- Socials -->
                 <div class="d-flex flex-row m-0 p-0 center-text justify-content-center" style="width: 250px">
                     <a href="https://facebook.com"><img class="icon" src="/icons/facebook.png"></a>
