--- a/wwwroot/css/pages/home.css
+++ b/wwwroot/css/pages/home.css
@@ -2,6 +2,14 @@
     Home Page
 */
 
+h2 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
+
+h3 {
+    border-bottom: 1px solid;
+}
+
 .introduction {
     justify-content: center;
     text-align: center;
@@ -15,6 +23,11 @@
     align-items: center;
     text-align: center;
     font-weight: bold;
+    min-width: 15rem;
+}
+
+.portrait-img {
+    width: max(15rem, 75%);
 }
 
 .background-image {
@@ -71,13 +84,12 @@
 }
 
 .services {
-    border: 1px solid;
-    padding: 10px;
-    margin: 10px;
-    width: 33%;
     text-align: left;
-    min-width: 200px;
-    background-color: var(--base-accent);
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
     color: var(--primary-text);
 }
+
+/*.services:hover {
+    box-shadow: 0px 0px 10px #c799e1;
+    background-color: white;
+    color: purple;
+}*/
